<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_marginTop="@dimen/dp60"
        style="?android:attr/progressBarStyleHorizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textSize="@dimen/sp20"
            android:textStyle="bold" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username_materialEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/username"
            android:inputType="text"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email_materialEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="normal" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_materialEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:background="?colorPrimaryVariant"
            android:text="@string/registration" />


    </LinearLayout>

</RelativeLayout>